--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "react-calendar": "^4.6.0",
     "react-router-dom": "^6.14.2"
   }
